--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome to the Dream Team!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
+        {# Google Fonts #}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+        {# Global style #}
+        <link rel="stylesheet" href="{{ asset('assets/css/global.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/fragments/_navbar.css') }}">
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -14,6 +24,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include './fragments/_navbar.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
