--- a/public/assets/css/buttons.css
+++ b/public/assets/css/buttons.css
@@ -15,3 +15,15 @@ button:hover {
     background-color: white;
     color: var(--primary-color);
 }
+
+/* Outline style */
+button.outline {
+    color: var(--primary-color);
+    border: solid 3px var(--primary-color);
+    background-color: white;
+}
+
+button.outline:hover {
+    color: white;
+    background-color: var(--primary-color);
+}
