--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -17,3 +17,13 @@ input {
 label {
     font-size: 18px;
 }
+
+.form-error {
+    font-weight: 700;
+    color: var(--error-color);
+}
+
+.form-error ul {
+    list-style: none;
+    margin-top: 18px;
+}
