Outings creation view done. Controller ready but not linked to the repositories

--- a/templates/outing_creation/outlet_creation.html.twig
+++ b/templates/outing_creation/outlet_creation.html.twig
@@ -4,6 +4,57 @@
 
 {% block body %}
 <div class="create-form">
-    {{ form(outingCreateForm) }}
+    {{ form_start(outingCreationForm) }}
+
+    <div>
+        {{ form_errors(outingCreationForm) }}
+    </div>
+
+    {{ form_row(outingCreationForm.name) }}
+    {{ form_row(outingCreationForm.startAt) }}
+    {{ form_row(outingCreationForm.limitSubscriptionDate) }}
+    {{ form_row(outingCreationForm.maxUsers) }}
+    {{ form_row(outingCreationForm.duration) }}
+    {{ form_row(outingCreationForm.about) }}
+    {{ form_row(outingCreationForm.campus) }}
+
+    <!-- Town filter -->
+    <label for="outing_town" class="required">Ville</label>
+    <select id="outing_town" name="outing_town" required="required">
+        <option value="" selected="selected">Choisissez une ville</option>
+        <!--{ for town in towns }}
+            <option value="{ town }}">{ town }}</option>
+        { endfor }}-->
+    </select>
+
+    <div>
+        {{ form_row(outingCreationForm.place) }}
+        <!--<button id="addPlace"><img href="" alt="Nouveau Lieu"/></button>-->
+    </div>
+
+    <!-- Place display -->
+    <div>
+        <label for="outing_road">Rue</label>
+        <input type="text" id="outing_road" name="outing_road" disabled="disabled" hidden>
+    </div>
+    <div>
+        <label for="outing_postal">Code Postal</label>
+        <input type="text" id="outing_postal" name="outing_postal" disabled="disabled" hidden>
+    </div>
+    <div>
+        <label for="outing_latitude">Latitude</label>
+        <input type="text" id="outing_latitude" name="outing_latitude" disabled="disabled" hidden>
+    </div>
+    <div>
+        <label for="outing_longitude">Longitude</label>
+        <input type="text" id="outing_longitude" name="outing_longitude" disabled="disabled" hidden>
+    </div>
+
+    <div>
+        <button id="register">Enregistrer</button>
+        <button id="publish">Publier la sortie</button>
+        <button id="cancel">Annuler</button>
+    </div>
+    {{ form_end(outingCreationForm) }}
 </div>
 {% endblock %}
