Added cancel outing feature

--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -7,7 +7,9 @@
     margin-bottom: 10px;
 }
 
-input {
+input,
+textarea,
+select {
     padding: 8px 12px;
     border-radius: 12px;
     border: 2px solid var(--light-color-1);
