--- a/public/assets/css/pages/outing_cancel.css
+++ b/public/assets/css/pages/outing_cancel.css
@@ -1,14 +1,8 @@
-#profile-details {
+#outing-details {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-}
-
-#profile-picture-wrapper img {
-    width: 400px;
-    height: auto;
-    border-radius: 20px;
 }
 
 #informations-wrapper .group {
@@ -19,16 +13,36 @@
 }
 
 #informations-wrapper .group label {
-    min-width: 130px;
+    min-width: 150px;
+}
+
+#informations-wrapper .input-wrapper label {
+    min-width: 140px;
 }
 
 #informations-wrapper .group p {
     font-weight: 500;
 }
 
-#profile-actions {
+#outing-actions {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 24px;
+}
+
+#reason {
+    align-items: flex-start;
+}
+
+#reason textarea {
+    min-width: 400px;
+    max-width: 400px;
+    min-height: 150px;
+}
+
+#outing .error {
+    text-align: center;
+    font-weight: 700;
+    color: var(--error-color);
 }
