--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -12,7 +12,7 @@
         <h1>Mon profil</h1>
         <div id="profile-details">
             <div id="profile-picture-wrapper">
-                <img src="{{ asset('assets/images/default-profile.svg')}}">
+                <img src="{{ app.user.imageFile ? asset('uploads/profile_pictures/' ~ app.user.imageFile) : asset('assets/images/default-profile.svg') }}">
             </div>
             <div id="informations-wrapper">
 
@@ -82,6 +82,7 @@
 
                 <div class="form-error">
                     {{ form_errors(form.imageFile) }}
+                    {{ uploadError ?? null }}
                 </div>
                 <div class="input-wrapper">
                     <label>{{ form_label(form.imageFile) }} :</label>
@@ -94,7 +95,7 @@
         </div>
     </section>
     <div id="profile-actions">
-        <a href="{{ app.request.headers.get('referer') }}"><button class="outline">Retour</button></a>
+        <a href="{{ app.request.headers.get('referer') }}"><button class="outline" type="button">Retour</button></a>
         <button type="submit">Enregistrer</button>
     </div>
     {{ form_end(form) }}
