Fix upload profile images

--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -12,7 +12,7 @@
         <h1>Mon profil</h1>
         <div id="profile-details">
             <div id="profile-picture-wrapper">
-                <img src="{{ app.user.imageFile ? asset('uploads/profile_pictures/' ~ app.user.imageFile) : asset('assets/images/default-profile.svg') }}">
+                <img src="{{ app.user.imageFilename ? asset('uploads/profile_pictures/' ~ app.user.imageFilename) : asset('assets/images/default-profile.svg') }}">
             </div>
             <div id="informations-wrapper">
 
