--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,25 +3,59 @@
 {% block title %} {{ parent() }} | Accueil{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('assets/css/pages/profile.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/pages/home.css') }}">
 {% endblock %}
+
 
 {% block body %}
 
-    <section id="outings filter">
+    <h3>Filtrer les sorties</h3>
 
-        <h2>Filtrer les sorties</h2>
+    <form id="outing-form" method="get">
 
         {{ form_start(outingForm) }}
-        {{ form_widget(outingForm) }}
+        <div class="wrapper">
+            <div class="form-left">
+                <div class="form-group col-lg-auto">
+                    {{ form_row(outingForm.campus) }}
+                </div>
+                <div class="form-group col-lg-auto">
+                    {{ form_row(outingForm.name) }}
+                </div>
+                <div class="form-group col-lg-auto">
+                    {{ form_row(outingForm.startAt) }}
+                </div>
+                <div class="form-group col-lg-auto">
+                    {{ form_row(outingForm.limitSubscriptionDate) }}
+                </div>
+            </div>
 
-        <button type="submit" title="search">Search</button>
+            <div class="form-right">
+                <div class="form-group col-md-auto">
+                    {{ form_row(outingForm.organizer) }}
+                </div>
+                <div class="form-group col-md-auto">
+                    {{ form_row(outingForm.subscribed) }}
+                </div>
+                <div class="form-group col-md-auto">
+                    {{ form_row(outingForm.unsubscribed) }}
+                </div>
+                <div class="form-group col-md-auto">
+                    {{ form_row(outingForm.passed) }}
+                </div>
+            </div>
+            <div class="search">
+                <button type="submit" title="search">Rechercher</button>
+            </div>
+        </div>
+
         {{ form_end(outingForm) }}
 
-    </section>
+    </form>
+
     <div>
-        <table id="outingTable" table-striped table-bordered style="width:100%">
-            <thead class="thead-dark text-center">
+        <table class="outingTable" table-striped table-bordered style="width:100%">
+            <thead class="titles">
             <tr>
                 <th>Nom de la sortie</th>
                 <th>Date de la sortie</th>
@@ -33,8 +67,7 @@
                 <th>Actions</th>
             </tr>
             </thead>
-            <tbody>
-
+            <tbody class="outingList">
 
             {# check if outings #}
             {% if outings is defined and outings is not empty %}
@@ -45,74 +78,75 @@
                     {# Take the finding outing's starting date #}
                     {% set startAt = outing.startAt|date('Y-m-d') %}
 
-                        <tr class="text-center">
-                            <td>{{ outing.name }}</td>
-                            <td>{{ outing.startAt|date('Y-m-d H:i:s') }}</td>
-                            <td>{{ outing.limitSubscriptionDate|date('Y-m-d') }}</td>
-                            <td>{{ outing.users|length }}/{{ outing.maxUsers }}</td>
-                            <td class="text-success">
-                            {# Tout doux : filtrer si l'utilisateur est un participant ou non #}
-                                    <i class="fas fa-check-circle"></i>
+                    <tr class="text-center">
+                        <td>{{ outing.name }}</td>
+                        <td class="outingDate">{{ outing.startAt|date('Y-m-d H:i:s') }}</td>
+                        <td>{{ outing.limitSubscriptionDate|date('Y-m-d') }}</td>
+                        <td>{{ outing.users|length }}/{{ outing.maxUsers }}</td>
+                        <td class="text-success">
 
-                            </td>
-                            <td>
-                                {% if outing.status == 'En création' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="En création">
+                            {# Todo : show if user is a participant #}
+                            <i class="fas fa-check-circle"></i>
+
+                        </td>
+                        <td>
+                            {% if outing.status == 'En création' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="En création">
                                     </span>
-                                {% elseif outing.status == 'Ouverte' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="Ouverte">
+                            {% elseif outing.status == 'Ouverte' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="Ouverte">
                                     </span>
-                                {% elseif outing.status == 'Clôturée' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="Clôturée">
+                            {% elseif outing.status == 'Clôturée' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="Clôturée">
                                     </span>
-                                {% elseif outing.status == 'En cours' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="En cours">
+                            {% elseif outing.status == 'En cours' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="En cours">
                                     </span>
-                                {% elseif outing.status == 'Terminée' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="Terminée">
+                            {% elseif outing.status == 'Terminée' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="Terminée">
                                     </span>
-                                {% elseif outing.status == 'Annulée' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="Annulée">
+                            {% elseif outing.status == 'Annulée' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="Annulée">
                                     </span>
-                                {% elseif outing.status == 'Archivée' %}
-                                    <span class="btn" data-toggle="tooltip" data-placement="top" title="Archivée">
+                            {% elseif outing.status == 'Archivée' %}
+                                <span class="btn" data-toggle="tooltip" data-placement="top" title="Archivée">
                                     </span>
+                            {% endif %}
+                        </td>
+                        <td>{{ outing.organizer.firstName }} {{ outing.organizer.lastName|slice(0, 1) }}.</td>
+
+                        {# todo -> put correct links related to actions #}
+
+                        <td id="Action">
+                            <div class="btn-group">
+                                <a title="Afficher">Afficher</a>
+
+                                {% if  app.user == outing.organizer %}
+                                    <a title="Modifier">Modifier</a>
+                                    {% if outing.status != "Annulée" %}
+                                        <a title="Annuler">Annuler</a>
+                                    {% endif %}
                                 {% endif %}
-                            </td>
-                            <td>{{ outing.organizer.firstName }} {{ outing.organizer.lastName|slice(0, 1) }}.</td>
 
-                            <!-- tout doux -> associer les liens aux différentes actions -->
+                                {% if app.user and outing.limitSubscriptionDate|date('Y-m-d')>"now"|date('Y-m-d') %}
+                                    <a title="Se désister">Se désister</a>
+                                {% elseif outing.users|length != outing.maxUsers and outing.limitSubscriptionDate|date('Y-m-d')>"now"|date('Y-m-d') and outing.status == "Ouverte" %}
+                                    <a title="S'inscrire">S'inscrire</a>
+                                {% else %}
+                                {% endif %}
+                            </div>
+                        </td>
+                    </tr>
 
-                            <td id="Action">
-                                <div class="btn-group">
-                                    <a title="Afficher">Afficher</a>
-
-                                    {% if app.user == outing.organizer or app.user.isAdmin %}
-                                        <a title="Modifier">Modifier</a>
-                                        {% if outing.status != "Annulée" %}
-                                            <a title="Annuler">Annuler</a>
-                                        {% endif %}
-                                    {% endif %}
-
-                                    {% if app.user and outing.limitSubscriptionDate|date('Y-m-d')>"now"|date('Y-m-d') %}
-                                        <a title="Se désister">Se désister</a>
-                                    {% elseif outing.users|length != outing.maxUsers and outing.limitSubscriptionDate|date('Y-m-d')>"now"|date('Y-m-d') and outing.status == "Ouverte" %}
-                                        <a href="{{ path('subscription') }}" title="S'inscrire">S'inscrire</a>
-                                    {% else %}
-                                    {% endif %}
-                                </div>
-                            </td>
-                        </tr>
-
-                {# end of foreach outing #}
+                    {# end of foreach outing #}
                 {% endfor %}
 
-            {# If there is no outing #}
+                {# If there is no outing #}
             {% else %}
                 <tr class="text-center">
                     <th class="text-center text-muted" scope="row" colspan="8">Aucune événement trouvé...</th>
                 </tr>
-            {# end of checking outings #}
+                {# end of checking outings #}
             {% endif %}
 
 
