--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -10,6 +10,8 @@
             }
         }
     </script>
+
+    <script src="{{ asset('assets/js/pages/outing_form.js') }}"></script>
 {% endblock %}
 {% block body %}
 <div class="create-form">
@@ -32,7 +34,7 @@
     <select id="outing_town" name="outing_town" required="required">
         <option value="" selected="selected">Choisissez une ville</option>
         {% for town in towns %}
-            <option value="{{ town }}">{{ town.name }}</option>
+            <option value="{{ town.id }}">{{ town.name }}</option>
         {% endfor %}
     </select>
 
@@ -71,3 +73,4 @@
     {{ form_end(outingCreationForm) }}
 </div>
 {% endblock %}
+
