--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -10,6 +10,8 @@
             }
         }
     </script>
+
+    <script src="{{ asset('assets/js/pages/outing_form.js') }}"></script>
 {% endblock %}
 {% block body %}
 <div class="create-form">
