Place info dynamic update

--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -33,6 +33,7 @@
         {{ form_row(outingCreationForm.place.town) }}
         {{ form_row(outingCreationForm.place.name) }}
         {{ form_row(outingCreationForm.place.street) }}
+        {{ form_row(outingCreationForm.place.town_postal_code) }}
         {{ form_row(outingCreationForm.place.latitude) }}
         {{ form_row(outingCreationForm.place.longitude) }}
         <!--<button id="addPlace"><img href="" alt="Nouveau Lieu"/></button>-->
