Outing Update, pre-test

--- a/templates/outing_update/outing_update.html.twig
+++ b/templates/outing_update/outing_update.html.twig
@@ -40,12 +40,12 @@
         {{ form_row(outingUpdateForm.campus) }}
 
         <div>
-            {{ form_row(outingUpdateForm.place.town) }}
-            {{ form_row(outingUpdateForm.place.name) }}
-            {{ form_row(outingUpdateForm.place.street) }}
-            {{ form_row(outingUpdateForm.place.town_postal_code) }}
-            {{ form_row(outingUpdateForm.place.latitude) }}
-            {{ form_row(outingUpdateForm.place.longitude) }}
+            {{ form_row(outingUpdateForm.town) }}
+            {{ form_row(outingUpdateForm.place) }}
+            {{ form_row(outingUpdateForm.street) }}
+            {{ form_row(outingUpdateForm.postal_code) }}
+            {{ form_row(outingUpdateForm.latitude) }}
+            {{ form_row(outingUpdateForm.longitude) }}
             <!--<button id="addPlace"><img href="" alt="Nouveau Lieu"/></button>-->
         </div>
 
