--- a/templates/outing_creation/outing_creation.html.twig
+++ b/templates/outing_creation/outing_creation.html.twig
@@ -30,12 +30,12 @@
     {{ form_row(outingCreationForm.campus) }}
 
     <div>
-        {{ form_row(outingCreationForm.place.town) }}
-        {{ form_row(outingCreationForm.place.name) }}
-        {{ form_row(outingCreationForm.place.street) }}
-        {{ form_row(outingCreationForm.place.town_postal_code) }}
-        {{ form_row(outingCreationForm.place.latitude) }}
-        {{ form_row(outingCreationForm.place.longitude) }}
+        {{ form_row(outingCreationForm.town) }}
+        {{ form_row(outingCreationForm.place) }}
+        {{ form_row(outingCreationForm.street) }}
+        {{ form_row(outingCreationForm.postal_code) }}
+        {{ form_row(outingCreationForm.latitude) }}
+        {{ form_row(outingCreationForm.longitude) }}
         <!--<button id="addPlace"><img href="" alt="Nouveau Lieu"/></button>-->
     </div>
 
