Create way to 'accueil'

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
         {# Global style #}
-        <link rel="stylesheet" href="{{ asset('assets/css/global.css') }} }}">
-        <link rel="stylesheet" href="{{ asset('assets/css/fragments/_navbar.css') }} }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/global.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/fragments/_navbar.css') }}">
 
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
