Send mail if forgotten password

--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -33,7 +33,7 @@
                     <input type="checkbox" name="_remember_me" />
                     Se souvenir de moi
                 </label>
-                <a id="reset-password" href="">Mot de passe oublié</a>
+                <a id="reset-password" href="{{ path('forgotten_password') }}">Mot de passe oublié</a>
             </div>
         </div>
 
